--- a/index.html
+++ b/index.html
@@ -62,70 +62,102 @@
 		<meta name="twitter:image:height" content="630" />
 		<meta name="twitter:image:alt" content="GreetMe thumbnail" />
 		<meta name="twitter:site" content="@zwilderrr" />
+
 		<link rel="canonical" href="https://www.getgreet.me" />
 
 		<title>GreetMe</title>
 
 		<style>
 			body {
-				background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+				background: linear-gradient(-45deg, #e65d33, #e53377, #1ba8db, #1bd9ad);
 				background-size: 400% 400%;
 				animation: gradient 7s ease infinite;
 				border: none;
 				font-family: "Hind Madurai";
 				text-align: center;
-                color: white;
+				color: white;
 			}
 
-            button {
-                margin-top: 40px;
-                padding: 20px;
-                border: solid thin;
-                border-radius: 10px;
-                background: transparent;
-                color: white;
-                font-size: 24px;
-                transition: .1s;
-            }
+			button {
+				margin-top: 40px;
+				padding: 20px;
+				border: solid thin;
+				border-radius: 10px;
+				background: transparent;
+				color: white;
+				font-size: 24px;
+				transition: 0.1s;
+			}
 
-            button:hover {
-                transform: translateY(-2px);
-                box-shadow: 0px 2px white;
-                cursor: pointer;
-            }
+			button:hover {
+				transform: translateY(-2px);
+				box-shadow: 0px 2px white;
+				cursor: pointer;
+			}
 
-            button:active {
-                transform: translateY(-1px);
-                box-shadow: 0 1px white;
-                box-sizing: 0 0;
+			button:active {
+				transform: translateY(-1px);
+				box-shadow: 0 1px white;
+				box-sizing: 0 0;
+			}
+
+            p {
+                position: absolute;
+                bottom: 5px;
+                right: 10%
             }
 
 			@keyframes gradient {
-                0% {
-                    background-position: 0% 50%;
+				0% {
+					background-position: 0% 50%;
 				}
 				50% {
-                    background-position: 100% 50%;
+					background-position: 100% 50%;
 				}
 				100% {
-                    background-position: 0% 50%;
+					background-position: 0% 50%;
 				}
 			}
 
 			.header-wrapper {
-                width: 50%;
 				margin: 10% auto;
 			}
 
-            .header-wrapper h1 {
-                font-size: 96px;
-                line-height: 100px;
-            }
+			.header-wrapper h1 {
+				width: 70%;
+				margin: 0 auto;
+				font-size: 96px;
+				line-height: 100px;
+			}
 
-            .header-wrapper h2 {
-                font-size: 48px;
-            }
+			.header-wrapper h2 {
+				font-size: 48px;
+				margin: 2% auto;
+				width: 50%;
+			}
 
+			@media only screen and (max-width: 600px) {
+                button {
+                    font-size: 16px;
+                }
+				.header-wrapper {
+					margin: 20% auto;
+				}
+
+				.header-wrapper h1 {
+					width: 95%;
+					margin: 0 auto;
+					font-size: 24px;
+					line-height: 30px;
+				}
+
+				.header-wrapper h2 {
+					font-size: 18px;
+					margin: auto;
+                    margin-top: 5%;
+					width: 90%;
+				}
+			}
 		</style>
 	</head>
 	<body>
@@ -136,7 +168,12 @@
 				every tab.
 			</h2>
 
-            <a href="https://chrome.google.com/webstore/detail/greetme/lafhiiebffibifegdiifmbgojeefcdmp"><button>Download the Google Chrome Extension</button></a>
+			<a
+				href="https://chrome.google.com/webstore/detail/greetme/lafhiiebffibifegdiifmbgojeefcdmp"
+				><button>Download the Google Chrome Extension</button></a
+			>
+
+            <p>&copy; 2022 zack wilder</p>
 		</div>
 	</body>
 </html>
