--- a/home.html
+++ b/home.html
@@ -101,11 +101,14 @@
 				box-sizing: 0 0;
 			}
 
-            p {
-                position: absolute;
-                bottom: 5px;
-                right: 10%
-            }
+			p {
+				position: fixed;
+				bottom: 0px;
+				left: 20px;
+				width: 100%;
+				text-align: left;
+				padding: 10px
+			}
 
 			@keyframes gradient {
 				0% {
@@ -137,9 +140,9 @@
 			}
 
 			@media only screen and (max-width: 600px) {
-                button {
-                    font-size: 16px;
-                }
+				button {
+					font-size: 16px;
+				}
 				.header-wrapper {
 					margin: 20% auto;
 				}
@@ -154,7 +157,7 @@
 				.header-wrapper h2 {
 					font-size: 18px;
 					margin: auto;
-                    margin-top: 5%;
+					margin-top: 5%;
 					width: 90%;
 				}
 			}
@@ -173,7 +176,7 @@
 				><button>Download the Google Chrome Extension</button></a
 			>
 
-            <p>&copy; 2022 zack wilder</p>
+			<p>&copy; 2022 zack wilder</p>
 		</div>
 	</body>
 </html>
