--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 				left: 20px;
 				width: 100%;
 				text-align: left;
-				padding: 10px
+				padding: 10px;
 			}
 
 			@keyframes gradient {
@@ -173,10 +173,16 @@
 
 			<a
 				href="https://chrome.google.com/webstore/detail/greetme/lafhiiebffibifegdiifmbgojeefcdmp"
-				><button>Download the Google Chrome Extension</button></a
+				><button>Go to the Chrome store</button></a
 			>
 
-			<p>&copy; 2022 zack wilder</p>
+			<p>&copy; 2024 zack wilder</p>
 		</div>
 	</body>
+	<script>
+		setTimeout(() => {
+			window.location.href =
+				"https://chrome.google.com/webstore/detail/greetme/lafhiiebffibifegdiifmbgojeefcdmp";
+		}, 3000);
+	</script>
 </html>
