--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 
       footer {
         text-align: center;
+        margin-top: 20px;
       }
 
       @media only screen and (max-width: 600px) {
@@ -159,7 +160,12 @@
     <footer>
       <p>
         &copy; 2024
-        <a href="https://zackwilder.com">zack wilder</a>
+        <a
+          href="https://zackwilder.com"
+          target="_blank"
+          style="text-decoration-line: none"
+          >zack wilder &#8599;</a
+        >
       </p>
     </footer>
   </body>
